[package]
name = "multiformats"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
unsigned-varint = "0.5.1"
multibase = "0.8.0"
digest = { version = "0.9", default-features = false }
sha-1 = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
sha3 = { version = "0.9", features = ["std"] }
blake2b_simd = { version = "0.5.9", default-features = false }
blake2s_simd = { version = "0.5.9", default-features = false }
blake3 = { version = "0.3.6", default-features = false }
md4 = "0.9.0"
md5 = "0.7.0"
skein-hash = "0.3.0"
ripemd160 = "0.9.1"
ripemd320 = "0.9.0"
data-encoding = "2.3.0"
data-encoding-macro = { version = "0.1.8", default-features = false }
bs58 = "0.3.0"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
parse_int = "0.4.0"
