[package]
name = "multiformats"
version = "0.1.0"
description = "Multiformat specifications in rust-lang"
repository = "https://github.com/bnclabs/multiformats"
keywords = ["multiformats", "ipfs"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/multiformats/"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
unsigned-varint = "0.7.1"
multibase = "0.9.1"
digest = { version = "0.10.3", default-features = false }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.2", features = ["std"] }
blake2b_simd = { version = "1.0.0", default-features = false }
blake2s_simd = { version = "1.0.0", default-features = false }
blake3 = { version = "1.3.1", default-features = false }
md4 = "0.10.1"
md5 = "0.7.0"
ripemd = "0.1.1"
data-encoding = "2.3.0"
data-encoding-macro = { version = "0.1.8", default-features = false }
bs58 = "0.4.0"

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
parse_int = "0.6.0"
